--- a/Frontend-team/package.json
+++ b/Frontend-team/package.json
@@ -22,6 +22,8 @@
     "react-dom": "^18.3.1",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.28.0",
+    "react-tag-autocomplete": "^7.4.0",
+    "react-tag-maker": "^1.1.0",
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7"
   },
